# Logic-progic

./: .clang-format  .gitignore  CMakeLists.txt  README.md  temp.txt  test
graphics/: CMakeLists.txt  c.txt  fltk.cpp  fltk.h  graphic.cpp  test.cxx  test.h
graphics/fltk/: CMakeLists.txt
graphics/fltk/classes/: add_elem_impl.h  createbutton.cpp  createbutton.h  drawing_elems.cpp  drawing_elems.h  elemlist.cpp  elemlist.h  fltk.cpp  fltk.h  funcs_for_file.cpp  funcs_for_file.h  functions.cpp  logicmap.cpp  logicmap.h  logicwindow.cpp  logicwindow.h  mapgroup.cpp  mapgroup.h  sheme.txt  temp.txt  type_elem.h
graphics/fltk/graph_elems/: graph_elem.cpp  graph_elem.h  graph_elems.cpp  graph_elems.h  graph_label.cpp  graph_label.h  graph_link.cpp  graph_link.h  graph_port.cpp  graph_port.h  logic_elems.cpp  logic_elems.h
graphics/graph_elems/: graph_elems.cpp  graph_elems.h
lib/Graph_lib/: Simple_window.rar
lib/logic_elems/: CMakeLists.txt  logic_elems.cpp  logic_elems.h
lib/poly/: poly.cpp  poly.h
lib/vec2D/: vec2D.cpp  vec2D.h
main/: CMakeLists.txt  drawing_elems.cpp  drawing_elems.h  functions.cpp  main.cpp  read.cpp  read.h  sheme.txt  sheme2.txt  temp.txt
test_graphics/: CMakeLists.txt  main.cpp
